# miranda-dev

./: Limitations! - README.txt  ProjectHome.md
Auto-Updater/: Portable.txt  Readme.txt
Auto-Updater/Source/: alter_nat.ahk  source.ahk
CK Auto-Updater/: Updates.ini
Miranda IM/: Miranda-Auto-Updater-Unicode.cmd  Readme.txt  langpack_german.txt  xfireserverinfo_11.rar
Miranda IM Langpack Builder/: Readme.docx
Miranda IM custome Skins, Tools by CHEF-KOCH/: Readme.txt
Miranda IM x64/: Build_Info.txt  langpack_german.txt
Wget-Updater/: MIMOCU.bat  Readme.txt  update-check.bat
langpack_german/: langpack_german.txt
patch/: FocusICQPassword.patch  doing something clever.patch  jabber-patch.patch  jabber_serverlist.patch  unicode.diff
patches/: db_mmap_sa_64bit.patch  icq-Folder-fix-filetransfer.patch  icq_proto.patch  lpgen.pl.patch  miranda_jabber_groupchat_history_since.patch  options.patch  path.patch  sb-s.patch  y_b_SecureDB.patch
trunk/: Credits.txt  DO NOT UPLOAD ANY PLUGIN OR SOMETHING ON MirandaVI !!!.txt  Do not upload anything on Miranda-VI.org!!!.txt
trunk/Miranda IM - CK Release/Miranda/Protocols/IcqPlusMod/: CMakeLists.txt  IcqCore.cpp  IcqCore.h  capabilities.cpp  chan_02data.cpp  chan_04close.cpp  chan_05ping.cpp  cookies.cpp  cookies.h  directpackets.cpp  directpackets.h  fam_01service.cpp  fam_02location.cpp  fam_03buddy.cpp  fam_04message.cpp  fam_09bos.cpp  fam_0alookup.cpp  fam_0bstatus.cpp  fam_13servclist.cpp  fam_15icqserver.cpp  globals.h  guids.h  i18n.cpp  iconlib.h  icq_advsearch.cpp  icq_avatar.cpp  icq_clients.cpp  icq_constants.h  icq_db.h  icq_direct.cpp  icq_direct.h  icq_directmsg.cpp  icq_filerequests.cpp  icq_filetransfer.cpp  icq_firstrun.cpp  icq_http.cpp  icq_http.h  icq_infoupdate.cpp  icq_infoupdate.h  icq_opts.cpp  (+34 more)
trunk/Miranda IM - CK Release/Miranda/Protocols/IcqPlusMod/UI/: askauthentication.cpp  askauthentication.h  loginpassword.cpp  loginpassword.h  userinfotab.cpp
trunk/Miranda IM - CK Release/Miranda/Protocols/IcqPlusMod/changeinfo/: db.cpp  dlgproc.cpp  main.cpp  upload.cpp
trunk/Miranda IM - CK Release/Miranda/Protocols/IcqPlusMod/docs/: IcqOscarJ-db settings.txt  help_us.txt
trunk/Miranda IM - CK Release/Miranda/Protocols/IcqPlusMod/icons_pack/: ICONS.dsp  ICONS.rc  resource.h  xstatus_icons.dsp  xstatus_icons.vcproj
trunk/Miranda IM - CK Release/Miranda/Protocols/IcqPlusMod/icons_pack/tzer_icons/: tzer_icons.dsw
(+6790 files in other folders)
